# umbra-sync

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  MEMORY.md  README.md  mise.toml  pyproject.toml
.agents/skills/markdown/: SKILL.md
.agents/skills/monday-com/: SKILL.md
.agents/skills/python/: SKILL.md
.github/agents/: data-engineering.agent.md
.github/workflows/: daily_run.yaml  dependabot.yaml  tests.yaml
.state/: last_run.json
src/: main.py
src/clients/: mday.py  outlk.py
src/utils/: contact_extraction.py  data_models.py  logger.py  monitoring.py  retry_strategy.py  transforms.py  watermark.py
src/utils/mday/: client.py
src/utils/outlk/: client.py  connection.py  parser.py
tests/: test_contact_extraction.py  test_data_models.py  test_logger.py  test_main.py  test_mday_client.py  test_monitoring.py  test_outlk_client.py  test_retry_strategy.py  test_transforms.py  test_watermark.py
