[project]
name = "umbra-sync"
version = "0.1.0"
description = "Umbra Outlook-Monday.com sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "msal>=1.35.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.9",
]
