[project]
name = "umbra-sync"
version = "0.1.0"
description = "Umbra Outlook-Monday.com sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "msal>=1.36.0",
    "phonenumbers>=9.0.30",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
